[package]
name = "virx_erlu_rlib"
version = "1.0.0"
edition = "2021"
authors = ["VirxEC <virx@virxcase.dev>"]
readme = "README.md"
description = "Rust modules for VirxERLU"
homepage = "https://github.com/VirxEC/VirxERLU-RLib"
license = "MIT"
include = ["/src", "pyproject.toml", "virx_erlu_rlib.pyi", "README.md"]
publish = false
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "virx_erlu_rlib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
dubins_paths = { version = "1.4.4", features = ["fast-math"] }
combo_vec = "0.5.1"

[dependencies.rl_ball_sym]
version = "3.0.0"
default-features = false
features = ["stable-compression", "standard", "dropshot", "hoops", "throwback"]

[dependencies.glam]
version = "0.23.0"
features = ["fast-math"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module", "abi3-py37"]

[dev-dependencies]
rand = "0.8"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true
